overlays/my-awesome-app/dev/rollout-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-python
spec:
  replicas: 10
  strategy:
  rollingUpdate:
    maxSurge: 1
    maxUnavailable: 1
  type: RollingUpdate
