overlays/my-awesome-app/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-python
spec:
  rules:
    - host: test-python.bbdev-dev.cyou
      http:
        paths:
          - backend:
              service:
                name: test-python
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - test-python.bbdev-dev.cyou
      secretName: test-python-tls
